Added new errors handling and likes count
