# docs/swagger.json
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Dislike"
+                            "$ref": "#/definitions/model.DislikeResp"
                         }
                     },
                     "400": {
@@ -102,7 +102,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Like"
+                            "$ref": "#/definitions/model.LikeResp"
                         }
                     },
                     "400": {
@@ -603,7 +603,7 @@
                 }
             }
         },
-        "model.Dislike": {
+        "model.DislikeResp": {
             "type": "object",
             "properties": {
                 "reaction_id": {
@@ -614,9 +614,12 @@
                 }
             }
         },
-        "model.Like": {
+        "model.LikeResp": {
             "type": "object",
             "properties": {
+                "likes_left": {
+                    "type": "integer"
+                },
                 "match_id": {
                     "type": "integer"
                 },
