# internal/server/handler/ratings_handlers/like.go
@@ -8,15 +8,10 @@ import (
 	"github.com/DimaGlobin/matchme/internal/lib/api"
 	"github.com/DimaGlobin/matchme/internal/lib/logger/sl"
 	"github.com/DimaGlobin/matchme/internal/middleware/auth"
-	"github.com/DimaGlobin/matchme/internal/model"
 	"github.com/DimaGlobin/matchme/internal/service"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 	"golang.org/x/exp/slog"
-)
-
-const (
-	like = "like"
 )
 
 type LikeHandler struct {
@@ -38,7 +33,7 @@ func NewLikeHandler(log *slog.Logger, srv *service.Service) *LikeHandler {
 // @ID like
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} model.Like
+// @Success 200 {object} model.LikeResp
 // @Failure 400,401
 // @Failure 500
 // @Router /api/action/like/{id} [post]
@@ -57,9 +52,10 @@ func (l *LikeHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	subjectId := r.Context().Value(auth.UserCtx).(uint64)
+	subjectId := r.Context().Value(auth.UserIdKey).(uint64)
+	subjectRole := r.Context().Value(auth.UserRoleKey).(string)
 
-	reactionId, matchId, err := l.service.RatingsServiceInt.AddLike(subjectId, objectId)
+	likeResp, err := l.service.RatingsServiceInt.AddLike(subjectId, objectId, subjectRole)
 	if err != nil {
 		msg := err.Error()
 		log.Error(msg, sl.Err(err))
@@ -68,10 +64,6 @@ func (l *LikeHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	log.Info(fmt.Sprintf("Reacted %s successfully, reactionId: %d", like, reactionId))
-	api.Respond(w, r, http.StatusOK, model.Like{
-		ReactionType: like,
-		ReactionId:   reactionId,
-		MatchId:      matchId,
-	})
+	log.Info(fmt.Sprintf("Reacted %s successfully, reactionId: %d", likeResp.ReactionType, likeResp.ReactionId))
+	api.Respond(w, r, http.StatusOK, likeResp)
 }
